Added siglip to clipwm post

--- a/content/blog/clip-wm/index.mdx
+++ b/content/blog/clip-wm/index.mdx
@@ -7,22 +7,46 @@ category: "research"
 
 ![Base Environment](/blog/clip-wm/pinpad_no_agent.png)
 
+## CLIP
+
 <LatentLandscape 
-  src="/blog/clip-wm/heatmap_goal_0.json" 
+  src="/blog/clip-wm/clip/heatmap_goal_0.json" 
   caption="black dot on a blue square"
 />
 
 <LatentLandscape 
-  src="/blog/clip-wm/heatmap_goal_1.json" 
+  src="/blog/clip-wm/clip/heatmap_goal_1.json" 
   caption="black dot on a red square"
 />
 
 <LatentLandscape 
-  src="/blog/clip-wm/heatmap_goal_2.json" 
+  src="/blog/clip-wm/clip/heatmap_goal_2.json" 
   caption="black dot on a green square"
 />
 
 <LatentLandscape 
-  src="/blog/clip-wm/heatmap_goal_3.json" 
+  src="/blog/clip-wm/clip/heatmap_goal_3.json" 
+  caption="black dot on a yellow square"
+/>
+
+## SigLIP 2
+
+<LatentLandscape 
+  src="/blog/clip-wm/siglip/heatmap_goal_0.json" 
+  caption="black dot on a blue square"
+/>
+
+<LatentLandscape 
+  src="/blog/clip-wm/siglip/heatmap_goal_1.json" 
+  caption="black dot on a red square"
+/>
+
+<LatentLandscape 
+  src="/blog/clip-wm/siglip/heatmap_goal_2.json" 
+  caption="black dot on a green square"
+/>
+
+<LatentLandscape 
+  src="/blog/clip-wm/siglip/heatmap_goal_3.json" 
   caption="black dot on a yellow square"
 />
